force-app/main/default/src/objects/PJN_Medical_History__c/PJN_Medical_History__c.object-meta.xml
<CustomObject>
    <description>Holds details of a patient&apos;s medical history, for example allergies, medications or lab test results.</description>
    <label>Medical History</label>
    <nameField>
        <displayFormat>MH-{00000}</displayFormat>
        <label>Medical History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>