force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Age_at_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>MVN_Age_at_Diagnosis__c</fullName>
    <label>Age at Diagnosis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>