force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Confirm_FH_Diagnosis_In_Both_Parents__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirm_FH_Diagnosis_In_Both_Parents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed FH Diagnosis In Both Parents</label>
    <type>Checkbox</type>
</CustomField>