force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Current__c.field-meta.xml
<CustomField>
    <fullName>MVN_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>