force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Cutaneous_Or_Tendinous_Xanthoma__c.field-meta.xml
<CustomField>
    <fullName>MVN_Cutaneous_Or_Tendinous_Xanthoma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cutaneous Or Tendinous Xanthoma</label>
    <type>Checkbox</type>
</CustomField>