force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Diagnostic__c.field-meta.xml
<CustomField>
    <fullName>MVN_Diagnostic__c</fullName>
    <label>Diagnostic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Genetic Testing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>