force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Evidence_of_FH_In_Both_Parents__c.field-meta.xml
<CustomField>
    <fullName>MVN_Evidence_of_FH_In_Both_Parents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evidence of FH In Both Parents</label>
    <type>Checkbox</type>
</CustomField>