force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Intolerant__c.field-meta.xml
<CustomField>
    <fullName>MVN_Intolerant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intolerant</label>
    <type>Checkbox</type>
</CustomField>