force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Metric_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Metric_Type_Name__c</fullName>
    <description>Formula to return the metric type name of the medical history record.</description>
    <formula>PJN_Metric_Type__r.Name</formula>
    <label>Metric Type Name</label>
    <type>Text</type>
</CustomField>