force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Other_Diagnostic__c.field-meta.xml
<CustomField>
    <fullName>MVN_Other_Diagnostic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Diagnostic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>