force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Other_Treatment__c.field-meta.xml
<CustomField>
    <fullName>MVN_Other_Treatment__c</fullName>
    <label>Other Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MVN_Treatment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Niacin</fullName>
            </value>
            <value>
                <fullName>Omega 3-6-9</fullName>
            </value>
            <value>
                <fullName>Bempedoic Acid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>