force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Premature_ASCVD_Paternal__c.field-meta.xml
<CustomField>
    <fullName>MVN_Premature_ASCVD_Paternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premature ASCVD - Paternal</label>
    <type>Checkbox</type>
</CustomField>