force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Premature_Cardiac_Event_Maternal__c.field-meta.xml
<CustomField>
    <fullName>MVN_Premature_Cardiac_Event_Maternal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Premature Cardiac Event - Maternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>