force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Premature_Cardiac_Event_Paternal__c.field-meta.xml
<CustomField>
    <fullName>MVN_Premature_Cardiac_Event_Paternal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Premature Cardiac Event - Paternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>