force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Record_Type_Name__c</fullName>
    <description>Formula to return the record type name of the medical history record.</description>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>