force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Section_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>MVN_Section_Not_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section Not Completed</label>
    <type>Checkbox</type>
</CustomField>