force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Tendon_Xanthoma_Paternal__c.field-meta.xml
<CustomField>
    <fullName>MVN_Tendon_Xanthoma_Paternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tendon Xanthoma - Paternal</label>
    <type>Checkbox</type>
</CustomField>