force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Treatment__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment__c</fullName>
    <label>Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Statin</fullName>
            </value>
            <value>
                <fullName>PCSK9i</fullName>
            </value>
            <value>
                <fullName>Zetia (ezetimibe)</fullName>
            </value>
            <value>
                <fullName>Juxtapid (lomitapide)</fullName>
            </value>
            <value>
                <fullName>Apheresis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>