force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Treatment_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Name__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Treatment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>