force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Untreated_Cholesterol_Maternal__c.field-meta.xml
<CustomField>
    <fullName>MVN_Untreated_Cholesterol_Maternal__c</fullName>
    <description>Untreated cholesterol on the Maternal side. Measured in mg/dL</description>
    <label>Untreated Cholesterol - Maternal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>