force-app/main/default/src/objects/PJN_Medical_History__c/fields/MVN_Xanthoma_First_Onset_Age__c.field-meta.xml
<CustomField>
    <fullName>MVN_Xanthoma_First_Onset_Age__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Xanthoma First Onset Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>