force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <description>Patient care plan for which the medical history is recorded.</description>
    <label>Care Plan</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The medical history must be related to a Care Plan.</errorMessage>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CarePlan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Medical History</relationshipLabel>
    <relationshipName>PJN_Medical_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>