force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date__c</fullName>
    <description>Single date to which medical history relates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>