force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Dates_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dates_Formula__c</fullName>
    <description>Summary of date(s) to which the medical history relates, shown in related list.</description>
    <formula>IF(
ISBLANK(PJN_Start_Date__c) &amp;&amp; ISBLANK(PJN_End_Date__c) &amp;&amp; ISBLANK(PJN_Date__c), NULL,
IF(
NOT(ISBLANK(PJN_Date__c)), TEXT(PJN_Date__c),
IF(
NOT(ISBLANK(PJN_Start_Date__c)) &amp;&amp; NOT(ISBLANK(PJN_End_Date__c)), TEXT(PJN_Start_Date__c) &amp; &quot; to &quot; &amp; TEXT(PJN_End_Date__c),
IF(
NOT(ISBLANK(PJN_Start_Date__c)) &amp;&amp; ISBLANK(PJN_End_Date__c), TEXT(PJN_Start_Date__c) &amp; &quot; to Present&quot;,
IF(
ISBLANK(PJN_Start_Date__c) &amp;&amp; NOT(ISBLANK(PJN_End_Date__c)), &quot;Unknown to &quot; &amp; TEXT(PJN_End_Date__c),
NULL
)
)
)
)
)</formula>
    <label>Dates</label>
    <type>Text</type>
</CustomField>