force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Dosage__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dosage__c</fullName>
    <description>Dosage of medication taken by patient concurrently with therapy.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>