force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_End_Date__c</fullName>
    <description>Date up to which the medical history relates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>