force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Frequency__c.field-meta.xml
<CustomField>
    <fullName>PJN_Frequency__c</fullName>
    <description>Frequency with which concurrent medication is taken by patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>