force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Medication__c.field-meta.xml
<CustomField>
    <fullName>PJN_Medication__c</fullName>
    <description>Name of medication taken by patient concurrently with therapy.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>