force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Metric_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The metric type this med history record is tied to. A record with record type PJN_Metric should have a metric.</description>
    <inlineHelpText>The metric type this med history record is tied to. A record with record type PJN_Metric should have a metric.</inlineHelpText>
    <label>Metric Type</label>
    <referenceTo>PJN_Metric_Type__c</referenceTo>
    <relationshipLabel>Metrics</relationshipLabel>
    <relationshipName>PJN_Medical_History</relationshipName>
    <type>Lookup</type>
</CustomField>