force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Patient__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patien for which the medical history is recorded.</description>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Medical history must be related to a Patient account.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical History</relationshipLabel>
    <relationshipName>PJN_Medical_History</relationshipName>
    <type>Lookup</type>
</CustomField>