force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Product__c.field-meta.xml
<CustomField>
    <fullName>PJN_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product captured as a concurrent medication.</description>
    <label>Product</label>
    <referenceTo>CareProgramProduct</referenceTo>
    <relationshipLabel>Medical History</relationshipLabel>
    <relationshipName>PJN_Medical_History</relationshipName>
    <type>Lookup</type>
</CustomField>