force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Reaction__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reaction__c</fullName>
    <description>Allergic reaction caused by a substance.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Reaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>