force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Results_Summary__c.field-meta.xml
<CustomField>
    <fullName>PJN_Results_Summary__c</fullName>
    <description>Summary of lab test results.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Results Summary</label>
    <type>TextArea</type>
</CustomField>