force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Start_Date__c</fullName>
    <description>Date from which the medical history relates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>