force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Substance__c.field-meta.xml
<CustomField>
    <fullName>PJN_Substance__c</fullName>
    <description>Substance to which a patient is allergic.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Substance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>