force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <description>Specific type of medical history being recorded (values vary by record type).</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Intolerance</fullName>
            </value>
            <value>
                <fullName>Concurrent Medication</fullName>
            </value>
            <value>
                <fullName>Lab Results</fullName>
            </value>
            <value>
                <fullName>Vaccination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>