force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>PJN_Vaccine__c</fullName>
    <description>Vaccine used for a vaccination.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vaccine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>