force-app/main/default/src/objects/PJN_Medical_History__c/fields/PJN_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Value__c</fullName>
    <description>For metrics, the captured value of the metric</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>