force-app/main/default/src/objects/PJN_Medical_History__c/recordTypes/MVN_Family_History.recordType-meta.xml
<RecordType>
    <fullName>MVN_Family_History</fullName>
    <active>true</active>
    <description>Maternal and paternal medical history.</description>
    <label>Family History</label>
</RecordType>