force-app/main/default/src/objects/PJN_Medical_History__c/recordTypes/MVN_Other_History.recordType-meta.xml
<RecordType>
    <fullName>MVN_Other_History</fullName>
    <active>true</active>
    <label>Other History</label>
</RecordType>