force-app/main/default/src/objects/PJN_Medical_History__c/recordTypes/MVN_Prior_Current_Treatment.recordType-meta.xml
<RecordType>
    <fullName>MVN_Prior_Current_Treatment</fullName>
    <active>true</active>
    <description>Previous or current medications taken by the patient.</description>
    <label>Prior/Current Treatment</label>
</RecordType>