force-app/main/default/src/objects/PJN_Medical_History__c/recordTypes/PJN_Allergy.recordType-meta.xml
<RecordType>
    <fullName>PJN_Allergy</fullName>
    <active>true</active>
    <description>Current or historic allergies or intolerances which have affected the patient.</description>
    <label>Allergy/Intolerance</label>
</RecordType>