force-app/main/default/src/objects/PJN_Medical_History__c/recordTypes/PJN_Concurrent_Medication.recordType-meta.xml
<RecordType>
    <fullName>PJN_Concurrent_Medication</fullName>
    <active>false</active>
    <description>Medications taken or being taken by the patient during their therapy.</description>
    <label>Concurrent Medication</label>
</RecordType>