force-app/main/default/src/objects/PJN_Medical_History__c/recordTypes/PJN_Metric.recordType-meta.xml
<RecordType>
    <fullName>PJN_Metric</fullName>
    <active>true</active>
    <description>Capture a biometric data point</description>
    <label>Metric</label>
</RecordType>