force-app/main/default/src/objects/PJN_Medical_History__c/recordTypes/PJN_Vaccination.recordType-meta.xml
<RecordType>
    <fullName>PJN_Vaccination</fullName>
    <active>false</active>
    <description>Vaccinations received</description>
    <label>Vaccination</label>
</RecordType>